# arm-6dof-ros2

./: .gitignore  README.md
UR5eUR7e.step/: universal-robots.com_legal_terms_and_conditions_for_use_of_graphical_documentation.txt
scripts/: call_planning_service.py  check_dependencies.sh  clean_ws.sh  custom_planning_service_smoke_test.sh  gazebo_smoke_test.sh  moveit_smoke_test.sh  plan_joint_trajectory.py  run_custom_planner_demo.sh  run_custom_planning_mode.sh  run_gazebo_trajectory_demo.sh  run_moveit_demo.sh  run_planning_mode.sh  run_trajectory_demo.sh  send_trajectory_goal.py  smoke_test.sh
src/arm_bringup/: CMakeLists.txt  README.md  package.xml
src/arm_bringup/launch/: gazebo_arm.launch.py  view_arm.launch.py
src/arm_bringup/rviz/: arm.rviz
src/arm_control/: CMakeLists.txt  README.md  package.xml
src/arm_control/config/: controllers.yaml  named_poses.yaml
src/arm_control/scripts/: send_trajectory_goal.py
src/arm_description/: CMakeLists.txt  README.md  package.xml
src/arm_description/meshes/ur7e/: ur7e_manifest.yaml
src/arm_description/meshes/ur7e/local/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/arm_description/meshes/ur7e/raw/: component_01.stl  component_02.stl  component_03.stl  component_04.stl  component_05.stl  component_06.stl  component_07.stl
src/arm_description/meshes/ur7e/reports/: ur7e_report.yaml
src/arm_description/meshes/ur7e_raw/: component_02.stl  component_04.stl  component_05.stl  component_06.stl  component_07.stl  components_meta.csv
src/arm_description/scripts/: extract_ur7e_component.py  prepare_ur7e.py
src/arm_description/urdf/: arm.urdf.xacro
src/arm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/arm_moveit_config/config/: arm.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/arm_moveit_config/launch/: moveit.launch.py
src/arm_moveit_config/rviz/: moveit.rviz
src/arm_msgs/: CMakeLists.txt  README.md  package.xml
src/arm_msgs/srv/: ExecutePlan.srv  ListNamedPoses.srv
src/arm_planning/: CMakeLists.txt  README.md  package.xml
src/arm_planning/config/: workspace_guard.yaml
src/arm_planning/launch/: custom_planning.launch.py
src/arm_planning/scripts/: arm_planning_service.py  plan_joint_trajectory.py
