<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.0</version>
  <description>Control package for the arm simulation workspace.</description>
  <maintainer email="hai372002@gmail.com">Hai</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
