<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.0.0</version>
  <description>Robot description package for the arm simulation workspace.</description>
  <maintainer email="hai372002@gmail.com">Hai</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
