<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.0.0</version>
  <description>Minimal MoveIt 2 configuration package for the arm simulation workspace.</description>
  <maintainer email="hai372002@gmail.com">Hai</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>arm_bringup</exec_depend>
  <exec_depend>arm_control</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
